# SentinelAI

./: .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  entrypoint.py  log.md  requirements.txt
alembic/versions/: a1b2c3d4e5f6_add_audit_logs_table.py  f2acb25bab88_add_agents_security_events_and_blocked_.py
app/: main.py
app/api/: deps.py  notifications.py  routes.py  threat_feeds.py
app/db/: base.py  models.py
app/services/: audit_service.py  auto_response_service.py  autonomous_monitor.py  file_scanner.py  geolocation_service.py  log_collector.py  network_monitor.py  notification_service.py  openai_service.py  process_monitor.py  remediation_service.py  threat_feed_service.py  virustotal_service.py  windows_firewall.py
app/static/: index.html
linux_agent/: README.md  agent.py  run_agent.sh
sentinel-desktop/: README.md  SentinelAI-Desktop.hta  SentinelAI-Launcher.bat  agent.py  build.bat  index.html  ml_detector.py  package-lock.json  package.json
sentinel-desktop/src/: main.js
sentinel-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
sentinel-desktop/src-tauri/capabilities/: default.json
sentinel-desktop/src-tauri/src/: lib.rs  main.rs
windows_agent/: README.md  agent.py  benchmark_ml.py  exfiltration_detector.py  install.bat  ransomware_canary.py  requirements.txt  run_agent.bat  test_ml.py  train_ml.py
windows_agent/ml/: __init__.py  anomaly_detector.py  behavioral_analyzer.py  ensemble_model.py  feature_extractor.py  mitre_mapping.py  online_learning.py  threat_detector.py  training_data.py
(+19 files in other folders)
